--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,6 +22,7 @@ spark_build_hadoop_version: 2.2.0
 spark_build_hadoop_profile: hadoop-2.2
 spark_build_skip_tests: no
 spark_build_clean: yes
+spark_build_mvn_extra_opts: ""
 
 _spark_build_mvn_opts_list:
   - "{{ '-Pyarn' if spark_build_with_yarn else '' }}"
@@ -29,6 +30,7 @@ _spark_build_mvn_opts_list:
   - "{{ '-Dhadoop.version=' + spark_build_hadoop_version }}"
   - "{{ '-DskipTests' if spark_build_skip_tests else '' }}"
   - "{{ 'clean' if spark_build_clean else '' }}"
+  - "{{ spark_build_mvn_extra_opts }}"
   - "package"
 
 _spark_build_mvn_opts: "{{ _spark_build_mvn_opts_list | join(' ') }}"
