--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,8 +11,10 @@
     - install
 
 - name: extract
-  command: tar xf "{{ _spark_package_name }}" -C "{{ spark_install_dest }}"
-  args:
+  unarchive:
+    dest: "{{ spark_install_dest }}"
+    src: "{{ ansible_env.PWD }}/{{ _spark_package_name }}"
+    copy: no
     creates: "{{ spark_install_dest }}/{{ _spark_directory }}"
   tags:
     - spark_install
